@@ -106,23 +106,19 @@ $('#wizardNewVMStep1').find('table.vboxOptions').find('span.translate').html(fun
 }).removeClass('translate');
 
 
-var sButtons = new Array(
-		{
-			/* Add Attachment Button */
-			'name' : 'mselecthdbtn',
-			'label' : trans('Choose a virtual hard drive file...','UIWizardNewVM'),
-			'icon' : 'select_file',
-			'click' : function () {
-				vboxMedia.actions.choose(null,'HardDisk',function(med){
-					if(med) vmNewFillExistingDisks(med.base);
-				});
-			}
-		}		
-);
 
-var wizardNewVMToolbar = new vboxToolbarSmall(sButtons);
-wizardNewVMToolbar.disabledString = 'dis';
-wizardNewVMToolbar.addButtons('newVMDiskVMM');		
+var wizardNewVMToolbar = new vboxToolbarSingle({
+	/* Add Attachment Button */
+	'name' : 'mselecthdbtn',
+	'label' : trans('Choose a virtual hard drive file...','UIWizardNewVM'),
+	'icon' : 'select_file',
+	'click' : function () {
+		vboxMedia.actions.choose(null,'HardDisk',function(med){
+			if(med) vmNewFillExistingDisks(med.base);
+		});
+	}
+});
+wizardNewVMToolbar.renderTo('newVMDiskVMM');		
 
 /* Toggle new / existing */
 function newVMToggleNewDisk(dis) {
